--- a/src/app/views/carts/shopping-cart/products/filters/filter-type/filter-list/filter-list.component.html
+++ b/src/app/views/carts/shopping-cart/products/filters/filter-type/filter-list/filter-list.component.html
@@ -2,6 +2,8 @@
     <input type="checkbox" [checked]="hasId()" (change)="check()" />
     <div class="flex" (click)="check()">
       <p class="ellipsis">
-        {{item.value}}</p>
+        {{item.title}}</p>
+      <p class="ellipsis">
+        {{item.key}}</p>
     </div>
   </div>
