--- a/src/app/views/carts/shopping-cart/products/product-listing/product-listing.component.scss
+++ b/src/app/views/carts/shopping-cart/products/product-listing/product-listing.component.scss
@@ -5,8 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    justify-content: space-between;
-    @include margin-left(15px);
+    // justify-content: space-between;
   }
 
   .image-wrapper {
@@ -74,7 +73,8 @@
     }
 
     @media (min-width: 56rem) {
-      width: 24%;
+      width: 23.7%;
+      @include margin-left(15px);
     }
   }
 
@@ -143,5 +143,26 @@
     @include width(10px);
     @include height(10px);
     @include margin(3px 0 0 5px);
+  }
+
+  .notFound {
+    text-align: center;
+    width: 50%;
+    margin: 10% auto;
+  
+    .text1 {
+      font-size: 24px;
+      margin-top: 20px;
+    }
+  
+    .text2 {
+      color: darkslategray;
+      font-size: 14px;
+    }
+  
+    img {
+      height: 150px;
+      width: 160px;
+    }
   }
 }
