--- a/src/app/views/carts/shopping-cart/products/filters/filter-type/filter-type.component.scss
+++ b/src/app/views/carts/shopping-cart/products/filters/filter-type/filter-type.component.scss
@@ -1,13 +1,20 @@
-.fltrTp,
-.selectAll {
+@import "../../../../../../../sass/main.scss";
+
+.list {
+  border-bottom: 1px solid $light-grey;
+  @include padding(0px 15px 15px 15px);
+}
+
+.filter-wrap,
+.selectall-wrap {
   display: flex;
   flex-direction: row;
-  min-height: 25px;
-  margin-top: 10px;
+  @include min-height(25px);
+  @include margin-top(10px);
   justify-content: space-between;
 
   p {
-    margin-bottom: 0;
+    @include margin-bottom(0);
   }
 
   div:nth-child(1) {
@@ -15,163 +22,98 @@
     flex-direction: row;
 
     p {
-      color: #00a9e1;
+      color: $blue;
       font-weight: 500;
+
+      @media #{$tablet-only} {
+        @include font-size(12px);
+        @include margin-top(-1px);
+      }
     }
   }
 }
 
-.selectAll {
-  height: 25px;
+.selectall-wrap {
+  @include height(25px);
 }
 
-.search {
-  cursor: pointer;
-  padding-left: 12px;
-}
-
-mat-checkbox {
-  margin-right: 10px;
-}
-
-.clrdrk {
-  color: #333333;
+.expand-icon {
+  color: $gray-dark;
   cursor: pointer;
   width: 90%;
 }
 
+.search-icon {
+  cursor: pointer;
+  @include padding-left(12px);
+}
+
 .srch {
-  color: #666666;
-  box-shadow: 0px 0px 15px lightgrey;
+  color: $gray-medium;
+  box-shadow: 0px 0px 15px $brdr;
   border-radius: 50%;
-  font-size: 14px;
-  background-color: #F3F3F3;
+  @include font-size(14px);
+  background-color: #f3f3f3;
   cursor: pointer;
 }
 
-.flex {
+.flex-wrap {
   display: flex;
   flex-direction: row;
   position: relative;
 }
 
-.form-control {
-  padding: .375rem .75rem;
+.search-control {
+  @include padding(6px 12px);
   height: calc(1.5em + 0.5rem);
-  margin-top: 6px;
+  @include margin-top(6px);
   width: 100%;
   background: #f5f5f5;
-  color: #666666;
-  font-size: 12px;
+  color: $gray-medium;
+  @include font-size(12px);
   border: none;
   position: relative;
-  padding-right: 30px;
+  @include padding-right(30px);
+  @include border-radius(5px);
 }
 
-.form-control:focus {
-  border: 1px solid #37A9E1;
+.search-control:focus {
+  border: 1px solid #37a9e1;
+  outline: 0;
 }
 
 .cross {
   position: absolute;
   z-index: 1;
-  font-size: 27px;
-  color: #545865;
-  right: 9px;
+  @include font-size(27px);
+  color: $gray-opac;
+  @include right(9px);
   cursor: pointer;
-  top: 3px;
+  @include top(3px);
 }
 
 .hyperlk {
-  color: #00a9e1;
+  color: $blue;
   font-weight: 500;
   cursor: pointer;
-  padding-left: 10px;
+  @include padding-left(10px);
 }
 
-.fltrList {
-  max-height: 120px;
+.filter-list-wrap {
+  @include max-height(120px);
   overflow: hidden;
 }
 
 .more {
   margin-left: 10%;
-  margin-top: 5px;
-}
-
-
-.list {
-  border-bottom: 1px solid #e5e5e5;
-  padding: 0px 15px 15px 15px;
-}
-
-::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 25px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: rgb(141, 140, 140);
-}
-
-
-::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #676767;
-  opacity: 1;
-  /* Firefox */
-}
-
-:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: #676767;
-}
-
-::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: #676767;
-}
-
-::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
-  color: #676767;
-}
-
-::-moz-placeholder {
-  /* Firefox 19+ */
-  color: #676767;
-}
-
-:-ms-input-placeholder {
-  /* IE 10+ */
-  color: #676767;
-}
-
-:-moz-placeholder {
-  /* Firefox 18- */
-  color: #676767;
-}
-
-
-
-.select-all {
-   
+  @include margin-top(5px);
 }
 
 input[type="checkbox"] {
-    width: 16px;
-    height: 16px;
+  @include width(16px);
+  @include height(16px);
+  @media #{$tablet-only} {
+    @include width(14px);
+    @include height(14px);
+  }
 }
-
