--- a/src/app/views/carts/shopping-cart/products/product-listing/product-listing.component.scss
+++ b/src/app/views/carts/shopping-cart/products/product-listing/product-listing.component.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    // justify-content: space-between;
+    @include margin-top(-10px);
   }
 
   .image-wrapper {
@@ -68,8 +68,9 @@
     @include border-radius(5px);
     overflow: hidden;
 
-    @media (min-width: 40rem) {
-      width: 49%;
+    @media #{$tablet-only} {
+      width: 47%;
+      @include margin-left(15px);
     }
 
     @media (min-width: 56rem) {
@@ -149,20 +150,60 @@
     text-align: center;
     width: 50%;
     margin: 10% auto;
-  
+
     .text1 {
       font-size: 24px;
       margin-top: 20px;
     }
-  
+
     .text2 {
       color: darkslategray;
       font-size: 14px;
     }
-  
+
     img {
       height: 150px;
       width: 160px;
     }
   }
+}
+
+.contHdr2 {
+  @include font-size(12px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.space {
+  @include margin(0px 10px 10px 14px);
+}
+
+.filterChip {
+  border: 1px solid $light-grey;
+  @include border-radius(25px);
+  @include padding(6px 10px);
+  @include margin-bottom(10px);
+  background-color: $light;
+  float: left;
+  @include margin-right(10px);
+}
+
+.filterChip p {
+  @include padding-right(10px);
+  @include margin-top(1px);
+  float: left;
+}
+
+.filterChip span {
+  float: left;
+}
+
+.filterChip i {
+  color: $primary;
+  opacity: 1;
+  @include font-size(14px);
+  cursor: pointer;
 }
