--- a/src/app/views/carts/shopping-cart/products/products.component.scss
+++ b/src/app/views/carts/shopping-cart/products/products.component.scss
@@ -13,9 +13,17 @@
 .col-3 {
   flex: 0 0 16%;
   max-width: 16%;
+  @media #{$tablet-only} {
+    flex: 0 0 24%;
+    max-width: 24%;
+  }
 }
 
 .col-9 {
   flex: 0 0 84%;
   max-width: 84%;
+  @media #{$tablet-only} {
+    flex: 0 0 76%;
+    max-width: 76%;
+  }
 }
