--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -8,7 +8,7 @@ $gray-light: lighten($dark, 73.3%) !default;    // #bbbbbb
 $success : #79bf3d;
 $danger : #bf0210;
 $light : #ffffff;
-$blue : #349dee;
+$blue : #00a9e1;
 $light-grey: #e5e5e5;
 $bg-grey: #464646;
 $light-bg-grey: #4c4c4c;
