--- a/src/app/views/carts/header/header.component.html
+++ b/src/app/views/carts/header/header.component.html
@@ -11,8 +11,7 @@
         <div class='column'>
             <div class='search-column'>
                 <form class="search" [formGroup]="productSearch">
-                    <input type="text" placeholder="Search.." (keyup)="searchTerm.next($event)" formcontrolname="title">
-                    <button type="submit" (click)="searchTerm.next($event)"><i class="fa fa-search"></i></button>
+                    <input type="text" placeholder="Search products..." (keyup.enter)="searchTerm.next($event)" formcontrolname="title">
                 </form>
             </div>
         </div>
